oasis-build/tests/ui/empty_service_macro.rs
fn main() {
    oasis_std::service!();
}

